manifests/keycloak-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f compose.yml
    kompose.version: 1.30.0 (9d8dcb518)
  creationTimestamp: null
  labels:
    io.kompose.service: keycloak
  name: keycloak
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: keycloak
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f compose.yml
        kompose.version: 1.30.0 (9d8dcb518)
      creationTimestamp: null
      labels:
        io.kompose.network/app: "true"
        io.kompose.service: keycloak
    spec:
      containers:
        - args:
            - start-dev
            - --import-realm
            - --metrics-enabled=true
            - --http-port=8282
          image: quay.io/keycloak/keycloak:latest
          name: keycloak
          ports:
            - containerPort: 8282
              hostPort: 8282
              protocol: TCP
          resources: {}
          volumeMounts:
            - mountPath: /opt/keycloak/data/import
              name: keycloak-data
      restartPolicy: Always
      volumes:
        - name: keycloak-database
          configMap:
            defaultMode: 420
            name: keycloak-database
        - name: keycloak-data
          configMap:
            defaultMode: 420
            name: keycloak-data
status: {}
