manifests/tempo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f compose.yml
    kompose.version: 1.30.0 (9d8dcb518)
  creationTimestamp: null
  labels:
    io.kompose.service: tempo
  name: tempo
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: tempo
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f compose.yml
        kompose.version: 1.30.0 (9d8dcb518)
      creationTimestamp: null
      labels:
        io.kompose.network/app: "true"
        io.kompose.service: tempo
    spec:
      containers:
        - args:
            - -config.file=/etc/tempo.yaml
          image: grafana/tempo
          name: tempo
          ports:
            - containerPort: 14268
              protocol: TCP
            - containerPort: 9411
              hostPort: 9411
              protocol: TCP
            - containerPort: 3200
              hostPort: 3200
              protocol: TCP
          resources: {}
          volumeMounts:
            - name: tempo-yml
              mountPath: /etc/tempo.yaml
              subPath: tempo-local.yaml
      restartPolicy: Always
      volumes:
        - name: tempo-claim1
          persistentVolumeClaim:
            claimName: tempo-claim1
        - name: tempo-yml
          configMap:
            name: tempo-yml
            defaultMode: 420
          
status: {}
