manifests/grafana-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f compose.yml
    kompose.version: 1.30.0 (9d8dcb518)
  creationTimestamp: null
  labels:
    io.kompose.service: grafana
  name: grafana
  namespace: default
spec:
  ports:
    - name: "3030"
      port: 3030
      targetPort: 3000
  selector:
    io.kompose.service: grafana
status:
  loadBalancer: {}
