manifests/postgres-db-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f compose.yml
    kompose.version: 1.30.0 (9d8dcb518)
  creationTimestamp: null
  labels:
    io.kompose.service: postgres-db
  name: postgres-db
  namespace: default
spec:
  ports:
    - name: "5432"
      port: 5432
  clusterIP: None
  selector:
    io.kompose.service: postgres-db
status:
  loadBalancer: {}
