manifests/pyroscope-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f compose.yml
    kompose.version: 1.30.0 (9d8dcb518)
  creationTimestamp: null
  labels:
    io.kompose.service: pyroscope
  name: pyroscope
  namespace: default
spec:
  ports:
    - name: "4040"
      port: 4040
      targetPort: 4040
  selector:
    io.kompose.service: pyroscope
status:
  loadBalancer: {}
