manifests/todo-web-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todoweb
spec:
  tls:
    - hosts:
        - todoweb
      secretName: todoweb-cert
  rules:
    - host: todoweb
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: todoweb
                port:
                  number: 3000
