manifests/todosvc-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todosvc
spec:
  tls:
    - hosts:
        - todosvc
      secretName: todosvc
  rules:
    - host: todosvc
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: todosvc
                port:
                  number: 8080
